# supplychain-prob

./: LICENSE  README.md  _backend.py  codex_package_prompt.md  numpy.py  pandas.py  pyproject.toml
.github/workflows/: ci.yml
matplotlib/: pyplot.py
scipy/: optimize.py  special.py  stats.py
src/supplychain_prob/: __init__.py  _errors.py  _rounding.py  _validation.py  buckets.py  distributions.py  extend.py  fit.py  loglikelihood.py  metrics.py  montecarlo.py  plotting.py  pricebrk.py  ranvar.py  zedfunc.py
tests/: test_basic.py
