[build-system]
requires = []
build-backend = "_backend"
backend-path = ["."]

[project]
name = "supplychain-prob"
version = "0.1.0"
description = "In-memory probabilistic modelling utilities for integer supply quantities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = []

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
ignore_errors = true

[tool.ruff]
line-length = 100
[tool.ruff.lint]
ignore = ["E", "F"]
