[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supplychain-prob"
version = "0.1.0"
description = "In-memory probabilistic modelling utilities for integer supply quantities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
]
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
  "pytest",
  "hypothesis",
  "ruff",
  "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
ignore_errors = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E", "F"]
